新規登録画面

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,3 +10,10 @@ ja:
         school_b_score: "高校Bの特点"
         title_info: "サブタイトル"
         text: "テキスト"
+  activerecord:
+    attributes:
+      user:
+        name: 名前
+        password: パスワード
+        password_confirmation: パスワード再入力
+        email: メールアドレス
