--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,6 +10,7 @@ ja:
         school_b_score: "高校Bの特点"
         title_info: "サブタイトル"
         text: "テキスト"
+        tournament_id: "大会"
     activerecord:
       attributes:
         user:
@@ -18,3 +19,4 @@ ja:
           password_confirmation: パスワード再入力
           email: メールアドレス
           nickname: ユーザー名
+          
