ページネーション　デザイン

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -36,4 +36,11 @@ ja:
           password_confirmation: パスワード再入力
           email: メールアドレス
           nickname: ユーザー名
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
           
