--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -34,6 +34,7 @@ ja:
       map:
         text: "本文"
         address: "市町村、住所"
+        latitude: "入力した地域"
         school: "高校"
     activerecord:
       attributes:
